update point net

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy==1.17.4
-torch==1.9.1
-torchvision==0.10.1
+# numpy==1.17.4
+# torch==1.9.1
+# torchvision==0.10.1
 einops
 chumpy
 opencv-python
